--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Webpack + React Todo App</title>
+    <meta charset="UTF-8">
+    <title>Webpack + React</title>
 </head>
 <body>
-	<div id="app"></div>
-	<script src="build/app.bundle.js"></script>
+    <div id="app"></div>
+    <script src="build/app.bundle.js"></script>
 </body>
 </html>
